--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -12,6 +12,34 @@
     padding: 0 0 1rem 0;
 }
 
+.projectsCards{
+    width: 45rem;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
 .mySwiper{
     height: auto;
 }
+
+@media (min-width: 375px){
+    .mySwiper{
+        width: 21rem;
+    }
+}
+@media (min-width: 425px){
+    .mySwiper{
+        width: 22rem;
+    }
+}
+@media (min-width: 768px){
+    .projects{
+        padding: 5rem 0;
+    }
+    .projectsCards{
+        margin-top: 2rem;
+    }
+}
+
