--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   --size-titleText: 1.3rem;
   --size-text: 1rem;
   --size-subtext: 0.8rem;
+  --size-description: .9rem;
 }
 
 [className="dark"] {
@@ -108,12 +109,33 @@ span.swiper-pagination-bullet {
 }
 .swiper-button-next::after {
   position: absolute;
-  left: 10px;
+  left: 15px;
   font-size: 1.5rem;
 }
 .swiper-button-prev::after {
   position: absolute;
   font-size: 1.5rem;
-  right: 10px;
+  right: 15px;
+}
+
+
+@media (min-width: 375px){
+  :root {
+    --size-title: 2.2rem;
+    --size-titleText: 1.4rem;
+    --size-text: 1.1rem;
+    --size-subtext: 0.9rem;
+    --size-description: 1.2rem;
+  }
+
+}
+@media (min-width: 768px){
+  :root {
+    --size-title: 2.6rem;
+    --size-titleText: 1.6rem;
+    --size-text: 1.3rem;
+    --size-subtext: 1.1rem;
+    --size-description: 1.5rem;
+  }
 }
 
