--- a/src/components/DarkMode/DarkMode.module.css
+++ b/src/components/DarkMode/DarkMode.module.css
@@ -53,3 +53,17 @@
     box-shadow: -1px 0px 5px rgba(255, 255, 255, .8);
     transform:  translateX(20px);
 }
+
+@media (min-width: 425px) and (min-height: 320px){
+    .switch + label{
+        padding: 2px;
+        width: 50px;
+        height: 25px;
+    }
+    .switch + label:after{
+        width: 20px;
+    }
+    .switch:checked + label:after{
+        transform:  translateX(26px);
+    }
+}
