--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,6 +1,6 @@
 .home{
     width: 100%;
-    height: 320px;
+    height: 100vh;
     background-color: rgb(var(--color-default));
     position: relative;
 }
@@ -32,6 +32,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 1rem;
 }
 .intro h2{
     width: 100%;
@@ -74,5 +75,11 @@
         filter: invert(1);
     }20%{
         filter: invert(1) blur(5px);
+    }
+}
+
+@media (min-width: 320px) and (min-height: 320px){
+    .home{
+        height: 100vh;
     }
 }
