Adicionado link do currículo para visualização

--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,8 @@ body::-webkit-scrollbar-thumb {
   border: 1px solid var(--color-emph);
 }
 
-button {
+button, a.download {
+  text-decoration: none;
   font-family: var(--font-subtitle);
   font-size: var(--size-text);
   color: var(--color-oposity-color);
@@ -74,12 +75,12 @@ button {
   transition: 50ms ease-in-out;
   -webkit-tap-highlight-color: transparent;
 }
-button:hover {
+button:hover, a.download:hover {
   background-color: rgba(73, 168, 39, 0.9);
   border-top: 1px solid rgba(73, 168, 39, 0.9);
   border-right: 1px solid rgba(73, 168, 39, 0.9);
 }
-button:active {
+button:active, a.download:active {
   box-shadow: none;
   border: none;
   margin-right: 0.3rem;
