--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -196,21 +196,23 @@
     opacity: 1;
   }
 }
-@media (min-width: 425px) and (min-height: 320px){
-  .content form{
+@media (min-width: 425px) and (min-height: 320px) {
+  .content form {
     padding: var(--size-title);
-    width: 23rem;
+    width: 98%;
   }
 }
-@media (min-width: 768px){
+@media (min-width: 768px) {
   .contact {
     padding: 5rem 0;
-  }  
-  .content form{
-    padding: var(--size-title);
-    width: 23rem;
   }
   .contact h2 {
     margin-top: 2rem;
   }
 }
+@media (min-width: 1024px) {
+  .content form {
+    width: 59.5rem;
+  }
+}
+
