--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@
   --size-title: 1.8rem;
   --size-titleText: 1.3rem;
   --size-text: 1rem;
+  --size-description: 0.9rem;
   --size-subtext: 0.8rem;
-  --size-description: .9rem;
 }
 
 [className="dark"] {
@@ -59,7 +59,8 @@ body::-webkit-scrollbar-thumb {
   border: 1px solid var(--color-emph);
 }
 
-button, a.download {
+button,
+a.download {
   text-decoration: none;
   font-family: var(--font-subtitle);
   font-size: var(--size-text);
@@ -75,12 +76,14 @@ button, a.download {
   transition: 50ms ease-in-out;
   -webkit-tap-highlight-color: transparent;
 }
-button:hover, a.download:hover {
+button:hover,
+a.download:hover {
   background-color: rgba(73, 168, 39, 0.9);
   border-top: 1px solid rgba(73, 168, 39, 0.9);
   border-right: 1px solid rgba(73, 168, 39, 0.9);
 }
-button:active, a.download:active {
+button:active,
+a.download:active {
   box-shadow: none;
   border: none;
   margin-right: 0.3rem;
@@ -90,7 +93,7 @@ button:active, a.download:active {
   border-left: 1px solid var(--color-tertiary);
 }
 
-.swiper-pagination{
+.swiper-pagination {
   position: relative;
   margin-top: 1rem;
 }
@@ -119,8 +122,7 @@ span.swiper-pagination-bullet {
   right: 15px;
 }
 
-
-@media (min-width: 375px){
+@media (min-width: 375px) {
   :root {
     --size-title: 2.2rem;
     --size-titleText: 1.4rem;
@@ -128,15 +130,22 @@ span.swiper-pagination-bullet {
     --size-subtext: 0.9rem;
     --size-description: 1.2rem;
   }
-
 }
-@media (min-width: 768px){
+@media (min-width: 768px) {
   :root {
     --size-title: 2.6rem;
     --size-titleText: 1.6rem;
     --size-text: 1.3rem;
     --size-subtext: 1.1rem;
     --size-description: 1.5rem;
+    
+    --size-titleHome: 2.2rem;
+    --size-textHome: 5.3rem;
+    --size-descriptionHome: 2rem;
+  }
+  .swiper{
+    width: 100%;
+    height: 100%;
   }
 }
 
